--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
       gap: 20px;
     }
 
+    .banner img {
+  display: block;
+  margin: 0 auto;
+}
+
     /* Centered Welcome Message */
     .welcome-message {
       font-size: 48px;
@@ -281,18 +286,22 @@
     <div class="dashboard">
       <div class="banner" id="banner-1">
         <h2>Marketplace.tf</h2>
+        <img src="icons/marketplace.tf.jpg" alt="Marketplace.tf" style="width:75px;height:75px;">
         <a href="https://marketplace.tf" target="_blank">Enter</a>
       </div>
       <div class="banner" id="banner-2">
         <h2>Scrap.tf</h2>
+        <img src="icons/scrap.tf.jpg" alt="Scrap.tf" style="width:75px;height:75px;">
         <a href="https://scrap.tf" target="_blank">Enter</a>
       </div>
       <div class="banner" id="banner-3">
         <h2>Mannco.store</h2>
+        <img src="icons/mannco.store.png" alt="Mannco.store" style="width:75px;height:75px;">
         <a href="https://mannco.store" target="_blank">Enter</a>
       </div>
       <div class="banner" id="banner-4">
         <h2>Backpack.tf</h2>
+        <img src="icons/backpack.tf.png" alt="Backpack.tf" style="width:75px;height:75px;">
         <a href="https://backpack.tf" target="_blank">Enter</a>
       </div>
     </div>
@@ -301,18 +310,22 @@
     <div class="dashboard">
       <div class="banner">
         <h2>r/tf2</h2>
+        <img src="icons/tf2.png" alt="TF2" style="width:75px;height:75px;">
         <a href="https://reddit.com/r/tf2" target="_blank">Enter</a>
       </div>
       <div class="banner">
         <h2>r/tf2shitposterclub</h2>
+        <img src="icons/tf2shitposterclub.png" alt="tf2shitposterclub" style="width:75px;height:75px;">
         <a href="https://reddit.com/r/tf2shitposterclub" target="_blank">Enter</a>
       </div>
       <div class="banner">
         <h2>r/TF2fashionadvice</h2>
+        <img src="icons/tf2fashionadvice.png" alt="TF2fashionadvice" style="width:75px;height:75px;">
         <a href="https://reddit.com/r/TF2fashionadvice" target="_blank">Enter</a>
       </div>
       <div class="banner">
         <h2>r/RandomActsOfTf2</h2>
+        <img src="icons/randomactsoftf2.png" alt="randomactsoftf2" style="width:75px;height:75px;">
         <a href="https://reddit.com/r/RandomActsOfTf2" target="_blank">Enter</a>
       </div>
     </div>
